<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="left|top">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">


                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_1"
                        android:id="@+id/checkBox1"

                        android:layout_marginTop="20dp"
                        android:checked="false"
                        android:textSize="20dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_2"
                        android:id="@+id/checkBox2"

                        android:checked="false"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_3"

                        android:id="@+id/checkBox3"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_4"
                        android:id="@+id/checkBox4"

                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_5"
                        android:id="@+id/checkBox5"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_6"

                        android:id="@+id/checkBox6"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_7"

                        android:id="@+id/checkBox7"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/f1_text_chbox_8"
                        android:id="@+id/checkBox8"

                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:checked="false" />



                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

</LinearLayout>