<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffad9cb8">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radioGroup">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_button_mykolaiv"
                            android:id="@+id/radioButtonMykolaiv"
                            android:checked="true" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_button_kyiv"
                            android:id="@+id/radioButtonKyiv"
                            android:layout_marginTop="10dp"
                            android:checked="false" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_button_kharkiv"
                            android:id="@+id/radioButtonKharkiv"
                            android:layout_marginTop="10dp"
                            android:checked="false" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_button_odesa"
                            android:id="@+id/radioButtonOdesa"
                            android:layout_marginTop="10dp"
                            android:checked="false" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_button_lviv"
                            android:id="@+id/radioButtonLviv"
                            android:layout_marginTop="10dp"
                            android:checked="false" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_button_zhytomyr"
                            android:id="@+id/radioButtonZhytomyr"
                            android:layout_marginTop="10dp"
                            android:checked="false" />
                    </RadioGroup>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_back"
                        android:id="@+id/buttonBack"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/button_background"
                        android:onClick="onClick"
                        android:layout_weight="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
