<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffad9cb8">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left|top">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_vic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_send_data"
                    android:id="@+id/textViewTestIsOver"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"
                    android:layout_marginTop="30dp"
                    android:textColor="#ff000000" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_send_data"
                    android:id="@+id/buttonSendData"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_background"
                    android:padding="10dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_new_test"
                    android:id="@+id/buttonNewTest"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:padding="10dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/button_exit"
                        android:onClick="onClick"
                        android:id="@+id/buttonExit"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_background" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
